css/style.css
html main body header {
  overflow: auto;
}

a {
  text-decoration: none !important;
  color:black !important;
}

p {
  font-size: 16px;
}

ul {
  list-style-type: none;
  margin-block-start: initial;
  margin-block-end: initial;
  margin-inline-start: initial;
  margin-inline-end: initial;
  padding-inline-start: initial;
}


/*img {
    display: block;
    max-width: 100%;
    margin: 0 0 1rem;
    border-radius: 5px;
}*/

h1 {
  display: block;
  color: #000000;
/*  font-weight: bold;
  font-family: 'Roboto', sans-serif; */

}


h2 {
  font-family: 'Roboto', sans-serif;  
}

.container {
  font-family: 'Roboto', sans-serif !important;  

}
.nav-container{
  display:-webkit-flex;
  display: flex;
  flex-direction: column;
  margin-left: auto;
  margin-right: auto;
  justify-content: space-between;
}

.nav-container a:not(.navlogo) {
  display:-webkit-flex;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}
.navlogo {
  background-color: white !important;
  font-size:36px;
  padding:10px;
  margin-left:15px;
  margin-right:15px;
  font-family: 'Libre Barcode 39 Text';
}

.nav-container a:not(.navlogo){
  display:block;
  margin: 5px;
  padding:15px;
  font-size: 20px;
  color: black !important;
  text-decoration: none;
  font-family: 'Roboto', sans-serif;
}

.nav-container a:hover, a:active, a:focus{
  background-color: #eee;
}

ul {
  list-style-type: none;
}

.project, .project-header {
    padding-bottom: 15px;
}

.project-container {
  padding-left: 15px;
  padding-right: 15px;
  margin-right:auto;
  margin-left:auto;
}

.project-title {
    font-size: 18px;
    font-weight: 700;
    display: inline-block;
}

.project-date {
    color: #777;
    font-size: 13px;
    display: inline-block;
    padding-left: 5px;
}

.project-image {
    max-height: 200px;
    margin-left: auto;
    margin-right: auto;
}

.project-title-row a {
    color: #303030;
    font-size: 20px;
}

.contact-intro {
  display:grid;
  grid-template-columns: 300px 1fr;
}
.contact-intro p {
  padding: 30px;
  font-size: 20px;
  font-family: 'Roboto', sans-serif;  
  vertical-align: middle;
  text-align: center;
}

.contact-intro img {
  max-width: 300px; 
  border-radius: 50%;
  margin-left: auto;
  margin-right: auto;
}

.contact-items {
  display: flex;
  flex-direction: row;
  justify-content: space-evenly;
  font-size: 30px;

}

/*.contact-container {
  display:-webkit-flex;
  display: flex;
  padding: 20px;
  flex-direction: column;
  justify-content: space-between;

}

.contact-container > a, i {
  color: black;
  background-color: rgba(255, 255, 255, 0.8);
  padding: 20px;
  text-decoration: none;
  font-size: 30px;
  height:150px;
  width: auto;
  font-family: 'Roboto', sans-serif;  
}
.contact-container > img {*/

/*  color: black;
  background-color: rgba(255, 255, 255, 0.8);*/
/*  padding: 20px;
  text-decoration: none;*/
/*  font-size: 30px;
  width: auto;
  font-family: 'Roboto', sans-serif; */
}
/*.contact-container > p {
  font-size: 30px;
}*/

.picture {
border: 1px solid;
/*width: 100px; */
height:200px;
/*suggest a min-width & min-height*/
}


.pheader {
	margin-top: 50px
}

.gallery-container {
  display:-webkit-flex;
  display: flex;
  padding: 20px;
  flex-direction: row;
  flex-wrap: wrap;
}
.gallery-container > img {
  width: 300px;
  height: 300px;
  padding: 50px;
}
.gallery-container > img:hover {
  width: 300px;
  height: 300px;
  padding: 48px;
  border: 2px solid blue;
}

a.skip {
	position: relative;
	left: -1000px;
	top: auto;
	width: 1px;
	height: 1px;	
	overflow: hidden;
	display: block;
}

a.skip:focus {
	left: 500px;
	width: auto;
	height: auto;
}

.edu-container {
  display: flex;
  display:-webkit-flex;
  flex-flow: row wrap;
  justify-content: space-between;
}

.flip-card {
  background-color: transparent;
  width: 255px;
  height: 255px;
  perspective: 1000px;
  padding:20px;
  margin-left: auto;
  margin-right: auto;
  tab-index: 1;
}

.flip-card-inner {
  position: relative;
/*  width: 100%;
  height: 100%;*/
  text-align: center;
  transition: transform 0.6s;
  transform-style: preserve-3d;
  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
}

.flip-card:hover .flip-card-inner {
  transform: rotateY(180deg);
}

.flip-card-front, .flip-card-back {
  position: absolute;
  width: 100%;
  height: 100%;
  backface-visibility: hidden;

  -webkit-perspective: 0;
  -webkit-backface-visibility: hidden;
  -webkit-transform: translate3d(0,0,0);
  visibility:visible;
}

.flip-card-front {
  background-color: #bbb;
  color: black;
  z-index: 2;
}

.flip-card-back {
/*  background-color: #2980b9;*/
  color: black;
  transform: rotateY(180deg);
  z-index: 1;

}



/* Extra small devices (phones, 600px and down) */
@media only screen and (max-width: 600px) {
/*  .navlogo {
    margin: auto !important;
    padding:auto !important;
  }
  */
  .navlogo {
    display:block;
    white-space: nowrap;
    text-align: center;
    margin-left: auto !important;
    margin-right: auto !important;
  }
  .contact-intro {
    grid-template-columns: initial;
    grid-template-rows: 300px 1fr;
  }
  .nav-container a:not(.navlogo) {
    display: block !important;
  }
  .nav-container-responsive {
    font-size: 20px;
    color: black !important;
    text-decoration: none;
    font-family: 'Roboto', sans-serif;
  }
  .nav-container-responsive a:not(.navlogo){
    display:none;

  }
} 

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
  .nav-container {
    position: fixed; /* Set the navbar to fixed position */
    top: 0; /* Position the navbar at the top of the page */
    width: 100%;
    background-color: white !important;
    z-index: 500;
    flex-direction: row !important;
  }
  .nav-container a:not(.navlogo) {
    flex-direction: row !important;  
  }
  main {
    margin-top: 60px;
  }
} 

/* Large devices (laptops/desktops, 992px and up) */
@media only screen and (min-width: 992px) {
  .nav-container {
    position: absolute;
    top: auto;
    z-index: 0;
  }
} 

@media print {
  body:after{
    content:url(http://chart.googleapis.com/chart?cht=qr&chs=200x200&choe=UTF-8&chld=H&chl= \
      <https://jackstephenson96.github.io/psite/index.html>)
  }
}
/* Extra large devices (large laptops and desktops, 1200px and up) */
/*@media only screen and (min-width: 1200px) {...}*/

